@@ -4,6 +4,10 @@ xxx, S3QL 0.20
     of a bucket that contains only the file system metadata. The
     resulting dummy can be used for debugging.
 
+  * Mounting with the local and sftp backends is now significantly
+    faster, because the object tree is no longer traversed completely.
+    
+    
 2010-07-25, S3QL 0.19
 
   * Fixed various smaller bugs, see Mercurial changelog for 
